force-app/main/default/objects/Training_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OfficeName__c</columns>
    <columns>ShippingCity__c</columns>
    <columns>ShippingState__c</columns>
    <columns>ShippingStreetAddress__c</columns>
    <columns>ShippingZipPostalCode__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>